[README] Description Added

--- a/tasks/user_setup/root_config.yml
+++ b/tasks/user_setup/root_config.yml
@@ -12,6 +12,10 @@
     password: "{{ root_passwd }}"
     update_password: on_create
     shell: /bin/zsh
+    generate_ssh_key: yes
+    ssh_key_type: "ed25519"
+    ssh_key_file: .ssh/ed_25519
+    ssh_key_comment: "$HOSTNAME"
     state: present
 
 - name: Users | Root | Create config directories
