[README] Small Updates

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,9 +2,9 @@
 dependencies: []
 
 galaxy_info:
-  role_name: docker
+  role_name: bootstrap
   author: jokerwrld999
-  description: Docker for Linux.
+  description: Bootstrap your Linux servers.
   license: "license (BSD, MIT)"
   min_ansible_version: 2.10
   platforms:
