[linting] Linting Config Files Organized

--- a/.config/ansible-lint.yaml
+++ b/.config/ansible-lint.yaml
@@ -1,11 +1,12 @@
 ---
-
 profile: production
 
 exclude_paths:
   - .cache/
   - .github/
-  - /collections/
+  - archive
+  - collections/
+  - roles/
   - .pre-commit-config.yaml
 
 skip_list:
@@ -22,4 +23,5 @@ skip_list:
   - command-instead-of-module
   - command-instead-of-shell
   - yaml[indentation]
+  - yaml[truthy]
   - schema[meta]
