--- a/.config/.pre-commit-config.yaml
+++ b/.config/.pre-commit-config.yaml
@@ -63,6 +63,7 @@ repos:
       - name: YAML Linter
         id: yamllint
         files: \.(yaml|yml)$
+        args: [--strict, -c=.config/.yamllint]
   - repo: https://github.com/ansible/ansible-lint.git
     rev: v6.17.2
     hooks:
