--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,32 +8,11 @@ name: CI
   # schedule:
   #   - cron: "0 7 * * 0"
 
-defaults:
-  run:
-    working-directory: "jokerwrld999.bootstrap"
+# defaults:
+# run:
+# working-directory: "jokerwrld999.bootstrap"
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the codebase.
-        uses: actions/checkout@v4
-        with:
-          path: "jokerwrld999.bootstrap"
-
-      - name: Set up Python 3.
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-
-      # - name: Install test dependencies.
-      #   run: pip3 install yamllint
-
-      # - name: Lint code.
-      #   run: |
-      #     yamllint .
-
   molecule:
     name: Molecule
     runs-on: ubuntu-latest
