[general] Added packages and Tags Updated

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,7 @@ custom_hostname: ""
 ssh_port: 22
 
 # Users Config
+setup_user: false
 custom_user: "{{ lookup('env', 'CUSTOM_USER') | default('jokerwrld', true) }}" # >>> ubuntu | ec2-user | custom_user
 temp_dir: "tmp"
 
