--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,13 +3,13 @@
   hosts: all
   become: true
   pre_tasks:
-    - name: Update apt cache.
-      apt: update_cache=true cache_valid_time=600
-      when: ansible_os_family == "Debian"
+    # - name: Update apt cache.
+    #   apt: update_cache=true cache_valid_time=600
+    #   when: ansible_os_family == "Debian"
 
-    - name: Install test dependencies (RedHat).
-      package: name=which state=present
-      when: ansible_os_family == "RedHat"
+    # - name: Install test dependencies (RedHat).
+    #   package: name=which state=present
+    #   when: ansible_os_family == "RedHat"
 
   roles:
     - role: jokerwrld999.bootstrap
