[ci/cd] CI YAML fix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        distro:
+        include:
           - distro: rockylinux9
             playbook: converge.yml
           # - distro: fedora39
