--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -13,3 +13,14 @@
 
   roles:
     - role: jokerwrld999.bootstrap
+
+  tasks:
+    - name: Output Failed Task
+      ansible.builtin.fail:
+        msg: "⚠️  Ansible provision failed on *{{ ansible_hostname }}*\n\n
+          *Task*:  {{ ansible_failed_task.name }}\n
+          *Action*: {{ ansible_failed_task.action }}\n
+          *Error Message*: \n ```{{ ansible_failed_result | to_nice_json }}```"
+      when:
+        - task_failed is defined
+        - task_failed == true
