[molecule] Fail Message Decoration #1

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -17,10 +17,15 @@
   tasks:
     - name: Output Failed Task
       ansible.builtin.fail:
-        msg: "⚠️  Ansible provision failed on *{{ ansible_hostname }}*\n\n
-          *Task*:  {{ ansible_failed_task.name }}\n
-          *Action*: {{ ansible_failed_task.action }}\n
-          *Error Message*: \n ```{{ ansible_failed_result | to_nice_json }}```"
+        msg: >-
+          {{
+            ternary(
+                "⚠️  Ansible provision failed on *{{ ansible_hostname }}*\n\n
+                *Task*:  {{ ansible_failed_task.name }}\n
+                *Action*: {{ ansible_failed_task.action }}\n
+                *Error Message*: \n ```{{ ansible_failed_result | to_nice_json }}```"
+            )
+          }}
       when:
         - task_failed is defined
         - task_failed == true
