[repositories] Debian Sources List Muted

--- a/tasks/software/repositories.yml
+++ b/tasks/software/repositories.yml
@@ -6,18 +6,18 @@
     line: "IgnorePkg   = ansible linux linux-headers linux-lts linux-lts-headers"
   when: ansible_distribution == "Archlinux"
 
-- name: Software | Repos | Add sources Debian
-  ansible.builtin.copy:
-    src: distribution_packages/debian_sources.list
-    dest: /etc/apt/sources.list
-    backup: yes
-  when: ansible_distribution == "Debian"
+# - name: Software | Repos | Add sources Debian
+#   ansible.builtin.copy:
+#     src: distribution_packages/debian_sources.list
+#     dest: /etc/apt/sources.list
+#     backup: yes
+#   when: ansible_distribution == "Debian"
 
-- name: Software | Repos | Add debian-backports
-  ansible.builtin.apt_repository:
-    repo: deb http://deb.debian.org/debian buster-backports main
-    filename: debian-backports
-  when: ansible_distribution == "Debian"
+# - name: Software | Repos | Add debian-backports
+#   ansible.builtin.apt_repository:
+#     repo: deb http://deb.debian.org/debian buster-backports main
+#     filename: debian-backports
+#   when: ansible_distribution == "Debian"
 
 - name: Software | Repos | Install package management tools
   ansible.builtin.package:
