--- a/tasks/software/repositories.yml
+++ b/tasks/software/repositories.yml
@@ -38,15 +38,11 @@
     creates: /etc/apt/sources.list.d/github-cli.list
   when: ansible_distribution in ["Debian", "Ubuntu"]
 
-- name: Software | Repos | Import Terraform
+- name: Software | Repos | Import Terraform Ubuntu/Debian
   ansible.builtin.shell: |
-    wget -O- https://apt.releases.hashicorp.com/gpg | \
-    gpg --dearmor | tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-    gpg --no-default-keyring \
-    --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg --fingerprint
-    echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \
-    https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
-    tee /etc/apt/sources.list.d/hashicorp.list
+    wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg \
+    echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
+    tee /etc/apt/sources.list.d/hashicorp.list \
     apt update
   args:
     creates: /etc/apt/sources.list.d/hashicorp.list
