--- a/tasks/software/repositories.yml
+++ b/tasks/software/repositories.yml
@@ -41,9 +41,9 @@
 
 - name: Software | Repos | Import Terraform Ubuntu/Debian
   ansible.builtin.shell: |
-    wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg \
+    wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
     echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
-    tee /etc/apt/sources.list.d/hashicorp.list && \
+    tee /etc/apt/sources.list.d/hashicorp.list
     apt update && apt install -y terraform
   args:
     creates: /etc/apt/sources.list.d/hashicorp.list
