--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,4 +35,4 @@ jobs:
 
       - name: Trigger a new import on Galaxy.
         run: >-
-          ansible-galaxy role import ${{ github.repository }} --api-key ${{ secrets.GALAXY_API_KEY }}
+          ansible-galaxy role import $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2) --api-key ${{ secrets.GALAXY_API_KEY }}
