--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,6 @@ name: CI
   push:
     branches:
       - main
-      - dev
   # schedule:
   #   - cron: "0 7 * * 0"
 
@@ -22,12 +21,12 @@ jobs:
         include:
           # - distro: rockylinux9
           #   playbook: converge.yml
-          - distro: fedora39
-            playbook: converge.yml
           - distro: ubuntu2204
-            playbook: converge.yml
+          - distro: ubuntu2004
           - distro: debian12
-            playbook: converge.yml
+          - distro: debian11
+          - distro: debian10
+          - distro: fedora39
 
     steps:
       - name: Check out the codebase.
