[repositories] Debian gnupg2 added

--- a/tasks/software/repositories.yml
+++ b/tasks/software/repositories.yml
@@ -3,6 +3,7 @@
   ansible.builtin.package:
     name:
       - curl
+      - gnupg2
       - software-properties-common
       - wget
     state: latest
