--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,9 +23,9 @@ jobs:
           #   playbook: converge.yml
           - distro: ubuntu2204
           - distro: ubuntu2004
+          - distro: ubuntu1804
           - distro: debian12
           - distro: debian11
-          - distro: debian10
           - distro: fedora39
 
     steps:
