[ci/cd] Platforms Updated #4

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,13 +19,13 @@ jobs:
     strategy:
       matrix:
         include:
-          # - distro: rockylinux9
-          #   playbook: converge.yml
-          - distro: ubuntu2204
-          - distro: ubuntu2004
           - distro: debian12
           - distro: debian11
           - distro: fedora39
+          - distro: ubuntu2204
+          - distro: ubuntu2004
+          - distro: rockylinux9
+            playbook: converge.yml
 
     steps:
       - name: Check out the codebase.
