--- a/tasks/software/packages_utilities.yml
+++ b/tasks/software/packages_utilities.yml
@@ -3,7 +3,7 @@
   ansible.builtin.package:
     name:
       - at
-      - "{{ aws_cli }}"
+      - bat
       - cifs-utils
       - colordiff
       - "{{ cron_package }}"
@@ -21,6 +21,7 @@
       - "{{ rename_package }}"
       - rsync
       - speedtest-cli
+      - sshfs
       - terraform
       - tldr
       - traceroute
@@ -33,8 +34,7 @@
 - name: Software | Utilities | Exclude packages Rocky
   ansible.builtin.package:
     name:
-      - bat
-      - sshfs
+      - "{{ aws_cli }}"
   when: ansible_distribution != "Rocky"
 
 - name: Software | Utilities | Install autojump
@@ -51,6 +51,13 @@
       - "{{ autojump_package }}"
       - kubectl
   when: ansible_distribution == "Archlinux"
+
+- name: Software | Utilities | Install packages Rocky
+  ansible.builtin.dnf:
+    name:
+      - "{{ aws_cli }}"
+    skip_broken: true
+  when: ansible_distribution == "Rocky"
 
 - name: Software | Utilities | Install Helm
   ansible.builtin.shell: |
