[ci/cd] Rocky Linux 8 Platform Added

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
           # - distro: ubuntu2204
           # - distro: ubuntu2004
           - distro: rockylinux9
-            playbook: converge.yml
+          - distro: rockylinux8
 
     steps:
       - name: Check out the codebase.
