--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,9 +25,6 @@ galaxy_info:
     - name: Rocky
       version:
         - all
-    - name: ArchLinux
-      versions:
-        - all
   galaxy_tags:
     - system
     - development
@@ -36,4 +33,5 @@ galaxy_info:
     - server
     - utilities
     - ssh
+    - zsh
     - p10k
